# osai-linux

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  README.md  ltigoneline -5
crates/osai-agent-cli/: Cargo.toml  README.md
crates/osai-agent-cli/src/: main.rs
crates/osai-agent-core/: Cargo.toml
crates/osai-agent-core/src/: apply.rs  ask.rs  chat.rs  lib.rs  runtime.rs  shared.rs
crates/osai-api/: Cargo.toml
crates/osai-api/src/: auth.rs  errors.rs  main.rs  plans.rs  receipts.rs  runtime_status.rs  status.rs
crates/osai-api/static/: ui.html
crates/osai-plan-dsl/: Cargo.toml  README.md
crates/osai-plan-dsl/src/: lib.rs
crates/osai-receipt-logger/: Cargo.toml  README.md
crates/osai-receipt-logger/src/: lib.rs
crates/osai-tool-executor/: Cargo.toml  README.md
crates/osai-tool-executor/src/: lib.rs
crates/osai-toolbroker/: Cargo.toml  README.md
crates/osai-toolbroker/src/: lib.rs
docs/: API_DESIGN.md  ARCHITECTURE.md  COMPUTER_USE_STRATEGY.md  CONTRIBUTING.md  CURRENT_STATE.md  DEVELOPMENT_PLAN.md  GITHUB_CODEX_WORKFLOW.md  LOCAL_SETUP.md  MODEL_RUNTIME.md  OSAI_AGENT_CORE_PLAN.md  PRIVACY_MODEL.md  PROJECT_OVERVIEW.md  PR_CHECKLIST.md  README.md  RECEIPTS.md  ROADMAP.md  SECURITY_MODEL.md  TESTING.md  TOOLING_AND_POLICIES.md  UI_DESKTOP_STRATEGY.md
docs/architecture/: OPENCLAW_DECISION.md  OSAI_MVP_SPEC.md
docs/testing/: LLAMACPP_E2E_VALIDATION.md  VLLM_E2E_VALIDATION.md
examples/: README.md
examples/agents/downloads-organizer/: README.md  agent.md  manifest.yml  permissions.yml
examples/plans/: model-chat.yml  organize-downloads.yml  risky-shell.yml
examples/policies/: default-secure.yml
scripts/: osai-dev-check  osai-dev-down  osai-dev-env  osai-dev-up  osai-e2e-vllm-check  osai-install-user-services  osai-llamacpp-check  osai-llamacpp-down  osai-llamacpp-env  osai-llamacpp-up  osai-local-check  osai-local-down  osai-local-env  osai-local-up  osai-vllm-check  osai-vllm-down  osai-vllm-env  osai-vllm-up  sync-claude-env.sh
services/model-router/: .env.example  README.md  pyproject.toml
services/model-router/src/osai_model_router/: __init__.py  config.py  main.py  providers.py  receipts.py  router.py  schemas.py
services/model-router/tests/: conftest.py  test_chat_completions.py  test_health.py  test_mock_isolation.py  test_normalization.py  test_receipts.py  test_routing.py  test_vllm.py
systemd/user/: osai-api.service  osai-llamacpp.service  osai-model-router.service  osai-vllm.service
