[workspace]
resolver = "2"
members = [
  "crates/osai-toolbroker",
  "crates/osai-plan-dsl",
  "crates/osai-receipt-logger",
  "crates/osai-agent-cli"
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["OSAI Project"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
