[package]
name = "osai-agent-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "osai-agent"
path = "src/main.rs"

[dependencies]
osai-plan-dsl = { path = "../osai-plan-dsl" }
osai-receipt-logger = { path = "../osai-receipt-logger" }
osai-toolbroker = { path = "../osai-toolbroker" }
osai-tool-executor = { path = "../osai-tool-executor" }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
