[package]
name = "osai-agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
osai-plan-dsl = { path = "../osai-plan-dsl" }
osai-receipt-logger = { path = "../osai-receipt-logger" }
osai-toolbroker = { path = "../osai-toolbroker" }
osai-tool-executor = { path = "../osai-tool-executor" }
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
dirs = "5"