[package]
name = "osai-api"
version = "0.1.0"
edition = "2021"
description = "OSAI local API service - exposes agent capabilities via HTTP"

[dependencies]
osai-agent-core = { path = "../osai-agent-core" }
osai-plan-dsl = { path = "../osai-plan-dsl" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dirs = "5"

[[bin]]
name = "osai-api"
path = "src/main.rs"